testsuite/tests/typecheck/should_fail/T5684.stderr

T5684.hs:20:12: error:
    • No instance for (A Bool) arising from a use of ‘op’
    • In the expression: op False False
      In the expression:
        [op False False, op 'c' undefined, op True undefined]
      In an equation for ‘flop1’:
          flop1 = [op False False, op 'c' undefined, op True undefined]

T5684.hs:24:12: error:
    • No instance for (B Char b0) arising from a use of ‘op’
    • In the expression: op 'c' undefined
      In the expression:
        [op False False, op 'c' undefined, op True undefined]
      In an equation for ‘flop1’:
          flop1 = [op False False, op 'c' undefined, op True undefined]
